@@ -13,6 +13,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #3056023 [import] USE query not working
 - bug #3038193 [display] Error when editing row with GEOMETRY column
 - bug #3062454 [interface] Display routines/events also when no tables are defined
+- support ARIA storage engine as well as its previous name MARIA
 
 3.3.7.0 (2010-09-07)
 - patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
